--- a/design/templates/OpenGame/novapedia.tpl.html
+++ b/design/templates/OpenGame/novapedia.tpl.html
@@ -10,7 +10,7 @@
   <tr class="c_j">
     <td colspan="3">
       <div style="display: table-row; position: relative; margin: 7px;">
-        <img src="{dpath}gebaeude/{UNIT_ID}.{UNIT_IMAGE_EXT}" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
+        <img src="{I_[UNIT_ID]}" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
         {UNIT_DESCRIPTION}
       </div>
 
