DESIGN-feat-40a18.1: Design v2 Phase 15 - skin.ini

--- a/design/templates/OpenGame/artifacts.tpl.html
+++ b/design/templates/OpenGame/artifacts.tpl.html
@@ -21,7 +21,7 @@
     <tr id="{artifact.ID}">
       <th width=120>
         <a href="infos.php?gid={artifact.ID}" class="link">{artifact.NAME}</a><br>
-        <img src="{dpath}gebaeude/{artifact.ID}.jpg" align="top" width="120" height="120" /><br>
+        <img src="{I_[artifact.ID]}" align="top" width="120" height="120" /><br>
         <!-- IF artifact.LEVEL -->
           <div><a href="artifacts.php?action={D_ACTION_USE}&unit_id={artifact.ID}" class="warning link">{L_art_use}</a></div>
         <!-- ENDIF -->
