--- a/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
+++ b/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
@@ -51,7 +51,7 @@ function mrc_change(mercenary_id)
     <tr>
       <th width=120>
         {officer.NAME}<br>
-        <img src="{dpath}gebaeude/{officer.ID}.jpg" align="top" width="120" height="120" /><br>
+        <img src="{I_[officer.ID]}" align="top" width="120" height="120" /><br>
       </th>
 
       <th align=justify>
