--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -52,7 +52,7 @@
 
           <!-- IF planet.PLANET_GOVERNOR_ID && planet.PLANET_GOVERNOR_LEVEL -->
           <span class="a75 icon_25per_left_4" title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" go="" mode="manage">
-            <img src="{dpath}gebaeude/{planet.PLANET_GOVERNOR_ID}.jpg" class="icon_fill o75">
+            <img src="{I_[planet.PLANET_GOVERNOR_ID]}" class="icon_fill o75">
             <span class="a75 left_bottom">{planet.PLANET_GOVERNOR_LEVEL}</span>
           </span>
           <!-- ENDIF -->
