--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -89,7 +89,7 @@
         <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_PLANET -->
           <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="overview.php">
-              <img style="position: absolute; left: 0px; top: 0px;" src="{TOPNAV_CURRENT_PLANET_IMAGE}" height="100%" alt="{TOPNAV_CURRENT_PLANET_NAME}" title="{TOPNAV_CURRENT_PLANET_NAME}">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{I_[TOPNAV_CURRENT_PLANET_IMAGE]}" height="100%" alt="{TOPNAV_CURRENT_PLANET_NAME}" title="{TOPNAV_CURRENT_PLANET_NAME}">
               <span style="position: absolute; right: 0; bottom: 0;" id="topnav_colonies_counter_total" class="icon_alpha">
                 <span id='topnav_colonies_counter'>{TOPNAV_COLONIES_CURRENT}</span>/{TOPNAV_COLONIES_MAX}
               </span>
