--- a/design/templates/OpenGame/planet_governor.tpl.html
+++ b/design/templates/OpenGame/planet_governor.tpl.html
@@ -5,7 +5,7 @@
   <div class="unit_preview" style="" id="unit{production.ID}" unit_id="{production.ID}">
     <div onclick="document.location='overview.php?mode=manage&cp={$PLANET_ID}'">
       <span style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%">
-        <img style="border-style: none;" src="{dpath}gebaeude/{$PLANET_GOVERNOR_ID}.jpg" height="100%" width="100%">
+        <img style="border-style: none;" src="{I_[$PLANET_GOVERNOR_ID]}" height="100%" width="100%">
       </span>
 
       <span style="position: absolute; bottom: 0px; left: 0px; width: 100%; height: 3ex; font-size: 100%;" class="icon_alpha">
